# lod_cloud_search_engine

./: LICENSE  README.md  api_v2.js  example.html  homepage.html  index.js  package-lock.json  package.json  testAPI.js
npm_module/: README.md  api_v2.js  example.html  index.js  package-lock.json  package.json  testAPI.js
python_module/: README.md  setup.cfg  test.py
python_module/src/lodcloud_search_API.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_module/src/lodcloud_search_api/: search_api.py
tests/: lod_cloud_API.js  testAPI.js
