[metadata]
name = lodcloud-search-API
version = 0.0.1
author = Antonio Giulio
author_email = antonio.giulio96@gmail.com
description = It makes available a set of functions created to make it easier and more effective to search for knowledge graphs among those made available by https://lod-cloud.net.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntonioGiulio/lod_cloud_search_engine
project_urls =
    Bug Tracker = https://github.com/AntonioGiulio/lod_cloud_search_engine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src